k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: game-config-depl
  labels:
    app: game-config-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-config-depl
  template:
    metadata:
      labels:
        app: game-config-depl
    spec:
      imagePullSecrets:
      - name: registry-digital-dice
      containers:
      - name: game-config-depl
        image: registry.digitalocean.com/digital-dice/game-config:image_tag
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
           path: /health
           port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
           path: /health
           port: 8000
           scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
