k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: game-config-service
  labels:
    app: game-config-service
spec:
  selector:
    app: game-config-depl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
