k8s/ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  namespace: dev
  name: game-config-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/whitelist-source-range: 95.104.120.225/32, 109.172.162.61/32, 37.232.19.236/32
spec:
  rules:
    - host: api.dev.digitaldicegame.com
      http:
        paths:
          - path: /game-cs(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: game-config-service
                port:
                  number: 80
